fix page size issue on IOS

--- a/Frontend/my-app/src/index.css
+++ b/Frontend/my-app/src/index.css
@@ -31,6 +31,7 @@ html, body {
   padding: 0;
   min-width: 320px;
   min-height: 100vh;
+  min-height: 100dvh;
   width: 100%;
   overflow-x: hidden;
 }
@@ -38,6 +39,7 @@ html, body {
 #root {
   width: 100%;
   min-height: 100vh;
+  min-height: 100dvh;
 }
 
 h1 {
